--- a/index.html
+++ b/index.html
@@ -9,48 +9,56 @@
 
 <header class="hero">
     <h1>Soluciones inmobiliarias claras y profesionales</h1>
-    <p>Compra, venta y asesoría de propiedades en San Luis Potosí</p>
+    <p>Compra, venta y asesoría de propiedades en San Luis Potosí, México.
+Atención directa, procesos formales y acompañamiento de principio a fin.</p>
 </header>
 
 <section class="section">
-    <h2>Quiénes somos</h2>
+    <h2>¿Quiénes Somos?</h2>
     <p>
-        Somos una inmobiliaria enfocada en brindar soluciones reales en operaciones de compra y venta
-        de propiedades, con procesos claros y atención profesional.
+        Somos una inmobiliaria con más de 15 años de experiencia en el sector, integrada por profesionales calificados en operaciones de compra y venta de propiedades.
+Trabajamos con procesos claros, información transparente y un enfoque responsable que permite a nuestros clientes tomar decisiones seguras y bien informadas. Atendemos propiedades en distintas condiciones, evaluando cada caso de manera individual y profesional.
+Nuestro objetivo es ofrecer un servicio confiable, sin promesas irreales, con acompañamiento durante todo el proceso y respaldo basado en la experiencia y el conocimiento del mercado.
     </p>
 </section>
 
 <section class="section">
-    <h2>Servicios</h2>
+    <h2>Nuestros Servicios</h2>
     <ul>
-        <li>Compra de propiedades en cualquier condición</li>
-        <li>Venta de casas y departamentos</li>
+        <li>Asesoría profesional para la comercialización de casas, departamentos y terrenos.</li>
+        <li>Adquisición de propiedades en distintas condiciones, con evaluación responsable.</li>
+        <li>Trámites y gestiones ante dependencias para operaciones inmobiliarias.</li>
+        <li>Avalúos comerciales, bancarios y catastrales con peritos certificados.</li>
+        <li>Gestión y asesoría en traspasos de propiedades conforme a la normativa vigente.</li>
+        <li>Orientación y acompañamiento en procesos de sucesión patrimonial.</li>
+        <li>TApoyo legal en operaciones y documentación inmobiliaria.</li>
+        <li>Soluciones para inmuebles con situación legal o administrativa pendiente.</li>
         <li>Asesoría en créditos Infonavit</li>
-        <li>Gestión de trámites inmobiliarios</li>
+        <li>Seguimiento profesional desde la evaluación hasta el cierre de la operación.</li>
     </ul>
 </section>
 
 <section class="section">
-    <h2>Propiedades</h2>
+    <h2>Propiedades Disponibles</h2>
 
     <div class="cards">
         <div class="card">
             <img src="images/casa1.jpg" alt="Propiedad 1">
             <h3>Casa en venta</h3>
-            <p>Información general de la propiedad.</p>
+            <p>Información general de la propiedad...</p>
         </div>
 
         <div class="card">
             <img src="images/casa2.jpg" alt="Propiedad 2">
             <h3>Departamento en venta</h3>
-            <p>Información general de la propiedad.</p>
+            <p>Información general de la propiedad...</p>
         </div>
     </div>
 </section>
 
 <section class="section">
     <h2>Contacto</h2>
-    <p>San Luis Potosí</p>
+    <p>San Luis Potosí, SLP, México</p>
     <p>Solicita información por mensaje o WhatsApp</p>
 </section>
 
